# mellow

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  meson.build
benchmark/: benchmark.cpp  meson.build
examples/: basic.c
include/: ft_malloc.h  internals.h  malloc.h
include/mellow/: debug.h  mellow.h
src/: block.c  calloc.c  debug.c  free.c  ft_malloc.c  malloc.c  meson.build  realloc.c
test/: meson.build  test_calloc.c  test_free.c  test_llm.c  test_malloc.c  test_realloc.c  utils.c  utils.h
